create-projects-nav-menu

--- a/portfolio/src/components/footer/Footer.css
+++ b/portfolio/src/components/footer/Footer.css
@@ -26,6 +26,9 @@
     width: 3.5rem;
     height: 3.5rem;
   }
+  #footer .copyright {
+    font-size: 0.7rem;
+  }
 }
 
 @media screen and (max-width: 414px) {
