--- a/portfolio/src/components/footer/Footer.scss
+++ b/portfolio/src/components/footer/Footer.scss
@@ -37,6 +37,10 @@ $breakpoint-phone: 414px;
                 height: 3.5rem;
             }
         }
+
+        .copyright {
+            font-size: 0.7rem;
+        }
     }
 }
 
