--- a/portfolio/src/components/footer/footerContent/FooterContent.css
+++ b/portfolio/src/components/footer/footerContent/FooterContent.css
@@ -75,12 +75,13 @@
   }
   .footer-content .footer-contact-container .contact-info {
     padding: 0;
+    max-width: 180px;
   }
   .footer-content .footer-contact-container .contact-info .footer-title {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   .footer-content .footer-contact-container .contact-info .footer-contact-link {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
   }
 }
 
