--- a/portfolio/src/components/footer/footerContent/FooterContent.scss
+++ b/portfolio/src/components/footer/footerContent/FooterContent.scss
@@ -117,13 +117,14 @@ $breakpoint-middle-small-less: 539px;
         .footer-contact-container {
             .contact-info {
                 padding: 0;
+                max-width: 180px;
 
                 .footer-title {
-                    font-size: 0.8rem;
+                    font-size: 0.7rem;
                 }
 
                 .footer-contact-link {
-                    font-size: 0.7rem;
+                    font-size: 0.6rem;
                 }
             }
         }
