--- a/portfolio/src/components/pages/projects/projectContent/ProjectContent.css
+++ b/portfolio/src/components/pages/projects/projectContent/ProjectContent.css
@@ -14,7 +14,7 @@
 
 .project-section .project-container h1 {
   font-size: 2.2rem;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Anton', sans-serif;
 }
 
 .project-section .project-container h2 {
