--- a/portfolio/src/components/navigation/logo/Logo.scss
+++ b/portfolio/src/components/navigation/logo/Logo.scss
@@ -30,7 +30,7 @@ $breakpoint-middle-small: 540px;
             grid-row: auto;
 
             .logo-name-container {
-                margin: 10px 0 0;
+                margin: 12px 0 0 5px;
 
                 h5 {
                     font-size: 0.85rem;
@@ -65,7 +65,7 @@ $breakpoint-middle-small: 540px;
                 color: $fixed-logo-color;
 
                 .logo-name-container {
-                    margin: 8px 0 0;
+                    margin: 8px 0 0 3px;
                 }
             }
         }
