--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
@@ -3,83 +3,64 @@
 }
 
 #section-about .about-section-container {
-  padding: 5em 0;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  padding: 5em 0 0;
+}
+
+#section-about .about-section-container .about-info-container {
+  position: relative;
+}
+
+#section-about .about-section-container .about-info-container .profile-wrapper {
+  max-width: 95%;
   margin: 0 auto;
 }
 
-#section-about .about-section-container .about-info-container .info-container {
-  color: #262626;
-  text-align: justify;
-  padding: 4em;
-}
-
-#section-about .about-section-container .about-info-container .info-container .about-title {
-  font-size: 2.3rem;
-  display: inline-block;
-  border-bottom: 2px solid #0aabc5;
-  letter-spacing: 1px;
-  margin: 0 0 0.5em;
-}
-
-#section-about .about-section-container .about-info-container .info-container .about-info {
-  font-size: 1.1rem;
-}
-
-#section-about .about-section-container .about-info-container .info-container .resume-btn {
-  padding: 0.5em 1.5em;
-  color: #fff;
-  background: #119ed6;
-  border-radius: 10px;
-  margin: 0.8em 0 0;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 0.9rem;
-  display: inline-block;
-}
-
-#section-about .about-section-container .about-info-container .info-container .resume-btn .spinner {
-  width: 20px;
-  height: 20px;
-  float: left;
-}
-
-#section-about .about-section-container .about-info-container .info-container .resume-btn .download {
-  float: right;
-}
-
-#section-about .about-section-container .about-info-container .info-container .resume-btn:hover {
-  background: #096489;
-}
-
-#section-about .about-section-container .about-image-container {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: -moz-box;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#section-about .about-section-container .about-image-container .about-image {
-  position: absolute;
-}
-
-#section-about .about-section-container .about-image-container .about-image img {
+#section-about .about-section-container .about-info-container .profile-background {
+  background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
   width: 100%;
+  height: 18em;
+}
+
+#section-about .about-section-container .about-info-container .profile-background .profile-photo {
+  position: absolute;
+  width: 170px;
+  height: 165px;
+  border-radius: 50%;
+  top: 13em;
+  border: 3px solid #fff;
+}
+
+#section-about .about-section-container .about-info-container .profile-container {
+  margin-top: 6em;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .profile-title {
+  font-size: 2rem;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .profile-sub-title {
+  font-size: 0.95rem;
+  font-weight: 600;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .profile-location {
+  font-size: 0.85rem;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .profile-info-container .profile-info {
+  padding: 1em 0 0;
+  font-size: 1.01rem;
+  text-align: left;
+  letter-spacing: 0.03rem;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .profile-info-container .profile-info:first-child {
+  padding: 0;
 }
 
 @media screen and (max-width: 1280px) {
   #section-about .about-section-container {
-    padding: 3em 0;
+    padding: 3em 0 0;
   }
   #section-about .about-section-container .about-info-container .info-container {
     padding: 3em;
@@ -97,45 +78,64 @@
 
 @media screen and (max-width: 960px) {
   #section-about .about-section-container {
-    padding: 2em 0;
+    padding: 2.5em 0 0;
   }
-  #section-about .about-section-container .about-info-container .info-container {
-    padding: 1em;
+  #section-about .about-section-container .about-info-container .profile-background .profile-photo {
+    position: absolute;
+    width: 140px;
+    height: 135px;
+    top: 13em;
   }
-  #section-about .about-section-container .about-info-container .info-container .about-title {
-    font-size: 1.8em;
+  #section-about .about-section-container .about-info-container .profile-container {
+    margin-top: 3.2em;
   }
-  #section-about .about-section-container .about-info-container .info-container .about-info {
+  #section-about .about-section-container .about-info-container .profile-container .profile-title {
+    font-size: 1.8rem;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-sub-title {
+    font-size: 0.9rem;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-location {
     font-size: 0.8rem;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-info-container .profile-info {
+    font-size: 0.9rem;
   }
 }
 
 @media screen and (max-width: 767px) {
-  #section-about .about-section-container {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+  #section-about .about-section-container .about-info-container .profile-background {
+    height: 13em;
   }
-  #section-about .about-section-container .about-image-container {
-    height: 400px;
+  #section-about .about-section-container .about-info-container .profile-background .profile-photo {
+    position: absolute;
+    width: 100px;
+    height: 95px;
+    top: 10em;
   }
-  #section-about .about-section-container .about-image-container .about-image {
-    max-width: 450px;
+  #section-about .about-section-container .about-info-container .profile-container {
+    margin-top: 3.2em;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-title {
+    font-size: 1.4rem;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-sub-title {
+    font-size: 0.75rem;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-location {
+    font-size: 0.65rem;
+    padding-bottom: 1em;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .profile-info-container .profile-info {
+    padding: 1em 0 0;
+    font-size: 0.75rem;
+    letter-spacing: 0.02rem;
   }
 }
 
 @media screen and (max-width: 540px) {
-  #section-about .about-section-container {
-    padding: 1em 0 0;
-  }
-  #section-about .about-section-container .about-info-container .info-container .resume-btn {
-    padding: 0.4em 1.4em;
-    font-size: 0.8rem;
-  }
-  #section-about .about-section-container .about-image-container {
-    height: 300px;
-  }
-  #section-about .about-section-container .about-image-container .about-image {
-    max-width: 350px;
+  #section-about .about-section-container .about-info-container .profile-container .profile-location {
+    padding-bottom: 1em;
   }
 }
 /*# sourceMappingURL=SectionAbout.css.map */
