--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
@@ -73,7 +73,7 @@ $breakpoin-middle-small: 540px;
             }
 
             .profile-background {
-                background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
+                // background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
                 width: 100%;
                 height: 18em;
 
