--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.css
@@ -16,6 +16,7 @@
 }
 
 #section-about .about-section-container .about-info-container .profile-background {
+  background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
   width: 100%;
   height: 18em;
 }
@@ -55,6 +56,32 @@
 
 #section-about .about-section-container .about-info-container .profile-container .profile-info-container .profile-info:first-child {
   padding: 0;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .resume-btn {
+  padding: 0.5em 1.5em;
+  color: #fff;
+  background: #119ed6;
+  border-radius: 10px;
+  margin: 0.8em 0 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  font-size: 0.9rem;
+  display: inline-block;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .resume-btn .spinner {
+  width: 20px;
+  height: 20px;
+  float: left;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .resume-btn .download {
+  float: right;
+}
+
+#section-about .about-section-container .about-info-container .profile-container .resume-btn:hover {
+  background: #096489;
 }
 
 @media screen and (max-width: 1280px) {
@@ -135,6 +162,10 @@
 @media screen and (max-width: 540px) {
   #section-about .about-section-container .about-info-container .profile-container .profile-location {
     padding-bottom: 1em;
+  }
+  #section-about .about-section-container .about-info-container .profile-container .resume-btn {
+    padding: 0.4em 1.4em;
+    font-size: 0.8rem;
   }
 }
 /*# sourceMappingURL=SectionAbout.css.map */
