--- a/portfolio/src/components/pages/home/homeHeader/HomeHeader.scss
+++ b/portfolio/src/components/pages/home/homeHeader/HomeHeader.scss
@@ -87,6 +87,7 @@ $breakpoint-middle-small: 540px;
         width: 100%;
         height: 80vh;
         margin: 0 auto;
+        display: block;
     }
 }
 
