--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
@@ -16,54 +16,7 @@ $breakpoin-middle-small: 540px;
 
     .about-section-container {
         padding: 5em 0 0;
-        // display: grid;
-        // grid-template-columns: repeat(2, 1fr);
-        // margin: 0 auto;
 
-        // .about-info-container {
-        //     .info-container {
-        //         color: $text-color;
-        //         text-align: justify;
-        //         padding: 4em;
-
-        //         .about-title {
-        //             font-size: 2.3rem;
-        //             display: inline-block;
-        //             border-bottom: 2px solid $border-color;
-        //             letter-spacing: 1px;
-        //             margin: 0 0 0.5em;
-        //         }
-
-        //         .about-info {
-        //             font-size: 1.1rem;
-        //         }
-
-        //         .resume-btn {
-        //             padding: 0.5em 1.5em;
-        //             color: $resume-btn-color;
-        //             background: $resume-btn-bg-color;
-        //             border-radius: 10px;
-        //             margin: 0.8em 0 0;
-        //             transition: 0.3s;
-        //             font-size: 0.9rem;
-        //             display: inline-block;
-
-        //             .spinner {
-        //                 width: 20px;
-        //                 height: 20px;
-        //                 float: left;
-        //             }
-
-        //             .download {
-        //                 float: right;
-        //             }
-
-        //             &:hover {
-        //                 background: $resume-btn-hover-bg-color;
-        //             }
-        //         }
-        //     }
-        // }
         .about-info-container {
             position: relative;
 
@@ -73,7 +26,7 @@ $breakpoin-middle-small: 540px;
             }
 
             .profile-background {
-                // background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
+                background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
                 width: 100%;
                 height: 18em;
 
@@ -117,24 +70,33 @@ $breakpoin-middle-small: 540px;
                         }
                     }
                 }
+
+                .resume-btn {
+                    padding: 0.5em 1.5em;
+                    color: $resume-btn-color;
+                    background: $resume-btn-bg-color;
+                    border-radius: 10px;
+                    margin: 0.8em 0 0;
+                    transition: 0.3s;
+                    font-size: 0.9rem;
+                    display: inline-block;
+
+                    .spinner {
+                        width: 20px;
+                        height: 20px;
+                        float: left;
+                    }
+
+                    .download {
+                        float: right;
+                    }
+
+                    &:hover {
+                        background: $resume-btn-hover-bg-color;
+                    }
+                }
             }
         }
-
-        // .about-image-container {
-        //     position: relative;
-        //     display: flex;
-        //     display: -moz-box;
-        //     justify-content: center;
-        //     align-items: center;
-
-        //     .about-image {
-        //         position: absolute;
-
-        //         img {
-        //             width: 100%;
-        //         }
-        //     }
-        // }
     }
 }
 
@@ -208,20 +170,6 @@ $breakpoin-middle-small: 540px;
                     }
                 }
             }
-
-            // .about-info-container {
-            //     .info-container {
-            //         padding: 1em;
-
-            //         .about-title {
-            //             font-size: 1.8em;
-            //         }
-
-            //         .about-info {
-            //             font-size: 0.8rem;
-            //         }
-            //     }
-            // }
         }
     }
 }
@@ -269,16 +217,6 @@ $breakpoin-middle-small: 540px;
                     }
                 }
             }
-
-            // grid-template-columns: repeat(1, 1fr);
-
-            // .about-image-container {
-            //     height: 400px;
-
-            //     .about-image {
-            //         max-width: 450px;
-            //     }
-            // }
         }
     }
 }
@@ -293,25 +231,13 @@ $breakpoin-middle-small: 540px;
                     .profile-location {
                         padding-bottom: 1em;
                     }
+
+                    .resume-btn {
+                        padding: 0.4em 1.4em;
+                        font-size: 0.8rem;
+                    }
                 }
             }
-
-            // .about-info-container {
-            //     .info-container {
-            //         .resume-btn {
-            //             padding: 0.4em 1.4em;
-            //             font-size: 0.8rem;
-            //         }
-            //     }
-            // }
-
-            // .about-image-container {
-            //     height: 300px;
-
-            //     .about-image {
-            //         max-width: 350px;
-            //     }
-            // }
         }
     }
 }
