--- a/portfolio/src/components/pages/projects/projectContent/projectHeader/ProjectHeader.css
+++ b/portfolio/src/components/pages/projects/projectContent/projectHeader/ProjectHeader.css
@@ -20,12 +20,15 @@
   width: 100%;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+  #project-header {
+    padding: 0 0 1em;
+  }
   #project-header .project-title {
     line-height: 80px;
   }
   #project-header .project-logo {
-    width: 80px;
+    width: 100px;
   }
 }
 
@@ -36,8 +39,11 @@
   }
   #project-header .project-title {
     text-align: center;
+    line-height: 50px;
+    font-size: 1.3rem;
   }
   #project-header .project-logo {
+    width: 80px;
     margin: 0 auto;
   }
 }
