--- a/portfolio/src/components/pages/projects/projectContent/projectHeader/ProjectHeader.scss
+++ b/portfolio/src/components/pages/projects/projectContent/projectHeader/ProjectHeader.scss
@@ -1,5 +1,5 @@
 //Breakpoints
-$breakpoint-iPad-less: 767px;
+$breakpoint-iPad-less: 768px;
 $breakpoint-middle-small-less: 539px;
 
 #project-header {
@@ -26,12 +26,14 @@ $breakpoint-middle-small-less: 539px;
 
 @media screen and(max-width: $breakpoint-iPad-less) {
     #project-header {
+        padding: 0 0 1em;
+
         .project-title {
             line-height: 80px;
         }
 
         .project-logo {
-            width: 80px;
+            width: 100px;
         }
     }
 }
@@ -44,9 +46,12 @@ $breakpoint-middle-small-less: 539px;
 
         .project-title {
             text-align: center;
+            line-height: 50px;
+            font-size: 1.3rem;
         }
 
         .project-logo {
+            width: 80px;
             margin: 0 auto;
         }
     }
