--- a/portfolio/src/components/pages/about/aboutMain/sectionCertificates/SectionCertificates.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionCertificates/SectionCertificates.scss
@@ -12,7 +12,7 @@ $breakpoint-iPad-less: 767px;
 $breakpoint-middle-small-less: 539px;
 
 #section-certificates {
-    padding: 3em 0;
+    margin-bottom: 2rem;
 
     .certificates-container {
         max-width: 900px;
