--- a/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionAbout/SectionAbout.scss
@@ -29,6 +29,7 @@ $breakpoin-middle-small: 540px;
                 background-image: url("../../../../../assets/pages/about/about-main/about-section/profile-bg.png");
                 width: 100%;
                 height: 18em;
+                border-radius: 0.4em;
 
                 .profile-photo {
                     position: absolute;
@@ -112,7 +113,7 @@ $breakpoin-middle-small: 540px;
                     padding: 3em;
 
                     .about-title {
-                        font-size: 2em;
+                        font-size: 2rem;
                     }
 
                     .about-info {
